# NetNote

./: README.md
JavaClient/: pom.xml
JavaClient/src/main/java/: module-info.java
JavaClient/src/main/java/com/example/javaclient/: Connection.java  HelloApplication.java  HelloController.java  MainWindow.java  RegisterUser.java  StartConnection.java  TcpClient.java  TcpConnection.java  TcpConnectionTesting.java  UserManagement.java
JavaClient/src/main/java/com/example/javaclient/LoginRegister/: Login.java  Register.java
JavaClient/src/main/java/com/example/javaclient/PackageTestingFrancesco/: connection.java
JavaClient/src/main/java/com/netnote/javaclient/: Connection.java  Launcher.java  MainWindow.java  StartConnection.java  UserManagement.java
JavaClient/src/main/resources/com/example/javaclient/: Appunti.fxml  LoginRegister.fxml  NewWindow.fxml  Registrazione.fxml  hello-view.fxml
JavaClient/src/main/resources/com/netnote/javaclient/: Appunti.fxml  LoginRegister.fxml  style.css
RustServer/: Cargo.toml
RustServer/src/: handle_client.rs  main.rs  note.rs  stringCheck.rs
RustServer/src/connection/: handle_client.rs  handle_json.rs  mod.rs  read_stream.rs  send_utf.rs
RustServer/src/connection/notes/: add_note.rs  create_note.rs  custom_error.rs  edit_note.rs  filter_by_author.rs  mod.rs  note_exists.rs  remove_note.rs
RustServer/src/connection/user/: get_credentials.rs  login.rs  mod.rs  register.rs  user_exists.rs
RustServer/src/connection/utils/: check_json_file.rs  create_if_not_exists.rs  handle_json.rs  mod.rs  send_user_notes.rs
(+35 files in other folders)
